// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete preview image 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__upload" style="width: 30px; height: 30px;"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`file message should be reactive 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="data:image/test" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="ghb-uploader__mask">
        <div class="ghb-loading ghb-loading--circular ghb-uploader__loading"><span class="ghb-loading__spinner ghb-loading__spinner--circular"><svg viewBox="25 25 50 50" class="ghb-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span></div>
        <div class="ghb-uploader__mask-message">2</div>
      </div>
    </div>
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`image-fit prop 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img" style="object-fit: contain;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`max-count prop 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="data:image/test" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
  </div>
</div>
`;

exports[`preview-cover slot 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
        <div class="ghb-uploader__preview-cover">url: https://img01.yzcdn.cn/vant/cat.jpeg, index: 0</div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
        <div class="ghb-uploader__preview-cover">url: https://img01.yzcdn.cn/vant/cat.jpeg, index: 1</div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`preview-size prop 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__preview" style="">
      <div class="ghb-image ghb-uploader__preview-image" style="width: 30px; height: 30px;"><img src="data:image/test" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__upload" style="width: 30px; height: 30px;"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="https://img01.yzcdn.cn/vant/cat.jpeg" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__preview">
      <div class="ghb-uploader__file"><i class="ghb-icon ghb-icon-description ghb-uploader__file-icon">
          <!----></i>
        <div class="ghb-uploader__file-name ghb-ellipsis">https://img01.yzcdn.cn/vant/test.pdf</div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__preview">
      <div class="ghb-uploader__file"><i class="ghb-icon ghb-icon-description ghb-uploader__file-icon">
          <!----></i>
        <div class="ghb-uploader__file-name ghb-ellipsis">test.pdf</div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__preview">
      <div class="ghb-image ghb-uploader__preview-image"><img src="data:image/test" class="ghb-image__img" style="object-fit: cover;">
        <div class="ghb-image__loading"><i class="ghb-icon ghb-icon-photo ghb-image__loading-icon">
            <!----></i></div>
      </div>
      <div class="ghb-uploader__preview-delete"><i class="ghb-icon ghb-icon-cross ghb-uploader__preview-delete-icon">
          <!----></i></div>
    </div>
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`render upload-text 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-photograph ghb-uploader__upload-icon">
        <!----></i><span class="ghb-uploader__upload-text">Text</span><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;

exports[`upload-icon prop 1`] = `
<div class="ghb-uploader">
  <div class="ghb-uploader__wrapper">
    <div class="ghb-uploader__upload"><i class="ghb-icon ghb-icon-add ghb-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="ghb-uploader__input"></div>
  </div>
</div>
`;
